	  be loaded from "realm_dir" in the "tls" section.  SNI will be
	  cached in the TLS-Server-Name-Indication attribute.
	* Preliminary support for haproxy "PROXY" protocol.
	  See sites-available/tls, "proxy_protocol" and doc/antora/modules/howto/pages/protocols/proxy/
	* Generate parse errors in more circumstances when we know that the
	  configuration is wrong.

	Bug fixes
	* Fix crash in trustrouter module (#4115). Patch from Alejandro Perez
	* Fix crash in state handling.
	* Don't alter global options in redhat logrotate scripts.
	* EAP-FAST will print errors and continue, rather than exiting
	  when OpenSSL fails various internal sanity checks.
	* Allow admin to manually change core limits, even when core limits
	  are disabled.
	* Fix chunked rlm_rest HTTP body.  Closes #4131.
	  Patch from Nathan Ward.
	* Many fixes around the SQL ippool queries.conf and schema.
	  Patches from Jorge Periera.
	* Fix MySQL stored procedures.  PR #4170 from Terry Burton.
	* Rework connection pool management for corner cases.
	  Fixes #4161, #4162, #4163.
	* Final fix for double free in #3188.
	* Fix sqlcounter wrong memory free. PR #4192 from Jorge Pereira
	* Accept slow writes from proxies over TCP, which allows the
	  server to make more progress when it receives partial packets.
	* Add 'weeklycounter' for rlm_sqlcounter.

FreeRADIUS 3.0.23 Thu 10 Jun 2021 12:00:00 EDT urgency=low
	Feature improvements
	* Update dictionary.aruba
	* Add "set home_server state ... down" in order to mark the
	  home server as administratively down.  Use "alive" to bring
	  it back to life.
	* Add Post-Auth-Type "Client-Lost" which should make it easier
	  to log when clients stop responding.
	* Add sites-available/totp as an example of how to use TOTP.
	* Add %{mschap:Domain-Name}, fixes #3944.
	* Cache TLS messages in &session-state, for more debugging.
	* Notes in eap configuration about TLS 1.0 / TLS 1.1, and setting
	  cipher_list = "DEFAULT@SECLEVEL=1"